fixed assistance Tables scss. Now only the table overflow and titles stay in place

--- a/caeq-web-portal/src/components/table/InscriptionTable.scss
+++ b/caeq-web-portal/src/components/table/InscriptionTable.scss
@@ -1,25 +1,40 @@
-.inscription-table{
+.inscription-table {
     .tabla-container {
         width: 100%;
         overflow-x: auto;
-      }
-      .tabla {
-        width: 100%;
-        border-collapse: separate;
-        border-spacing: 0 16px;
+
+        .inscription-row {
+          h1{
+            font-size: 70px;
+          }
+          .table-wrapper{
+            max-height: 800px;
+
+            .tabla {
+              width: 100%;
+              border-collapse: separate;
+              border-spacing: 0 16px;
+
+              .tabla th,
+              .tabla td {
+                padding: 24px;
+                text-align: center;
+                border-radius: 10px;
+                white-space: nowrap;
+              
+              }
       
+            }
+
+            .inscription-row {
+            
+
+            }
+          }
+        }
       }
-      .table-wrapper {
-        max-height: 800px;
-      }
-      .tabla th,
-      .tabla td {
-        padding: 24px;
-        text-align: left;
-        border-radius: 10px;
-        white-space: nowrap;
       
-      }
+      
       
       
       .fixed-header {
@@ -102,14 +117,27 @@
     
         padding: 20px;
     
-        h1 {
+        hr {
+          width: 77%;
+          float: left;
+          margin-top: -10px;
+
+          h1 {
             font-size: 32px;
             text-align: center;
             margin-top: 30px;
         }
+
+          h2 {
+              font-size: 20px;
+              display: inline-block;
+              margin-right: 20px;
+        }
+      }
+        
     
         .inscription-row {
-            display: flex;
+            display: inline;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
